Section 4: s/bars/lines/

--- a/groth1.tex
+++ b/groth1.tex
@@ -1818,7 +1818,7 @@ Let $s=\operatorname*{sep}\nolimits_{v}A$. Then, the cells
 $\left(s, v-1\right), \left(s, v\right), \left(s, v+1\right),
 \left(s+1, v-1\right), \left(s+1, v\right), \left(s+1, v+1\right)$
 all belong to $\lm$ (due to what we just said about separating
-bars). We shall refer to this observation as the
+lines). We shall refer to this observation as the
 ``six-cells property''.
 
 Now, $B = \operatorname*{res}\nolimits_{v-1}A$, so $B$ is
